[package]
authors = [""]
edition = "2021"
name = "bittorrent-rust"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68" # error handling
bytes = "1.3.0" # helps wrap responses from reqwest
clap = {version = "4.0.32", features = ["derive"]}# creating a cli              
futures-util = {version = "0.3.3", features = ["sink"]} 
hex = "0.4.3" 
regex = "1" # for regular expressions
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
serde = {version = "1.0.136", features = ["derive"]}# for json mangling              
serde_bencode = "0.2.3" # for bencode encoding/decoding
serde_bytes = "0.11.12" # for dealing with bytes
serde_json = "1.0.105" # for json mangling
serde_urlencoded = "0.7.1" # for url encoding
sha1 = "0.10.1" # hashing
tempfile = "3" # creating temporary directories
thiserror = "1.0.38" # error handling
tokio = {version = "1.23.0", features = ["full"]}# async http requests        
tokio-util = "0.7.12"
